# Compressore-Lifetime

./: .gitignore  BUILD.md  README.md  build.bat  compressor_lifetime_3_0.py  compressor_lifetime_3_1.py  compressor_lifetime_3_2.py  compressor_lifetime_3_2_6.py  daq_device_manager.py  noise test.py  pyproject.toml  requirements-ni.txt
3.0/: CompressorApp.exe - Shortcut.lnk
3.1/: CompressorApp.exe - Shortcut.lnk
3.1/compressor_lifetime_1.dist/: _bz2.pyd  _decimal.pyd  _hashlib.pyd  _multiprocessing.pyd  _overlapped.pyd  _socket.pyd  _uuid.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
3.2_6/: compressor_lifetime_3_1.py
3.2_6/dist_nuitka/compressor_lifetime_3_1.dist/: _asyncio.pyd  _ctypes.pyd  _elementtree.pyd  _lzma.pyd  _queue.pyd  _ssl.pyd  _zoneinfo.pyd
compressor_lifetime/: compressor_lifetime_3_1.py
compressor_lifetime_4/: README.md
compressor_lifetime_4/backend/: README.md  requirements.txt  run.py
compressor_lifetime_4/config/: io_templates.yaml  station_overrides.yaml  system.yaml
compressor_lifetime_4/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
compressor_lifetime_4/scripts/: start_dev.ps1
compressor_lifetime_4/备用文件/: New HMI.txt  compressor_lifetime.py
data record/: Log_Dev1_Grp2_P0_L8-15_AI1_St2_20260407_130229_143366.csv
python_ni_common/: main.py
python_ni_common/config/: hardware.json  recipe_standard.json  settings.json
python_ni_common/modules/: config_loader.py  driver.py  logic_engine.py  ui_main.py
scripts/: build_nuitka.ps1
(+44 files in other folders)
