[project]
name = "compressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.124.4",
    "nidaqmx>=1.0.2",
    "nuitka>=2.8.9",
    "pydantic>=2.10.6",
    "pyqt6>=6.7.1",
    "pyqtgraph>=0.13.3",
    "pytest>=8.3.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.33.0",
    "websockets>=13.1",
]
